# sauna-project-landing

./: .env_example  Dockerfile  Makefile  README.md  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml  starting test
app/app/: config.py  dev_settings.py  middleware.py  settings.py  urls.py
app/landing/: admin.py  models.py
app/landing/migrations/: 0001_initial.py
app/landing/utils/: constants.py  models.py
app/static/users/: style.css
app/templates/: base.html  home.html
app/templates/users/: imgload.html  profile.html
app/users/: models.py
app/users/migrations/: 0001_initial.py
nginx/: Dockerfile  nginx.conf
sauna_landing/: manage.py
sauna_landing/base/: models.py
sauna_landing/base/migrations/: 0001_initial.py
sauna_landing/carusel_html/: first_picture.html  second_picture.html
sauna_landing/carusel_images_content/: first_picture.html
sauna_landing/home/: models.py
sauna_landing/home/migrations/: 0001_initial.py  0002_alter_carouselimage_custom_content.py  0002_homepage_description_alter_faq_answer_and_more.py  0002_remove_carouselimage_caption_and_more.py  0003_alter_carouselimage_custom_content.py  0003_carouselimage_caption_position_x_and_more.py  0003_homepage_body.py  0003_remove_promotion_image_alter_homepage_departments.py  0004_alter_carouselimage_custom_content.py  0004_alter_homepage_departments.py  0004_carouselimage_overlay_images.py  0004_service.py  0005_alter_homepage_departments.py  0005_faq.py  0006_alter_homepage_departments.py  0006_homepage_departments.py  0009_delete_service.py  (+3 more)
sauna_landing/sauna_landing/: celery.py  settings.py  urls.py  wsgi.py
sauna_landing/telegrambot/: container.py  tasks.py
sauna_landing/users/: admin.py  forms.py  models.py  urls.py  views.py
(+31 files in other folders)
