[tool.poetry]
name = "sauna-project-landing"
version = "1.0.0"
description = ""
authors = [
    "Dmitry Vasiliev <contact.vasiliev.dmitry@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
wagtail = "^6.2.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
