[tool.poetry]
name = "sauna-project-landing"
version = "1.0.0"
description = ""
authors = [
    "Dmitry Vasiliev <contact.vasiliev.dmitry@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.20"
wagtail = "^6.2.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
black = "^24.8.0"
python-telegram-bot = "13.1"
celery = {extras = ["redis"], version = "^5.3.6"}
structlog = "^24.4.0"
python-json-logger = "^2.0.7"
dependency-injector = "^4.43.0"
jinja2 = "^3.1.4"
emoji = "^2.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"
django-test-migrations = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
